@@ -185,6 +185,8 @@
 	Expand environment variables in the arguments of :mark command.  Thanks to
 	an anonymous at Vifm Q2A site.
 
+	Improved detection and reporting of invalid marks by :mark command.
+
 	Fixed line number column not including padding to the left of it.
 
 	Fixed local options not being loaded on Ctrl-W x.
